<resources>
    <!-- log in -->
    <string name="app_name">Minerva</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <!-- sign up -->
    <string name="confirm_password">Confirm password</string>
    <!-- books -->
    <string name="hint_search">Search…</string>
    <!-- bottom navigation menu -->
    <string name="ic_books">Books</string>
    <string name="ic_profile">Profile</string>
    <!-- notes -->
    <string name="placeholder_note">Note</string>
    <!-- profile -->
    <string name="label_account">Account:</string>
    <string name="log_off">Log off</string>
    <string name="switch_dark_mode">Dark mode</string>
    <!-- add book -->
    <string name="placeholder_isbn">ISBN</string>
    <string name="button_search">Search</string>
    <string name="button_scan">Scan</string>
    <string name="label_book_title">Title:</string>
    <string name="label_book_authors">Authors:</string>
    <string name="button_add">Add</string>
    <!-- auth nav graph -->
    <string name="fragment_log_in_label">Log in</string>
    <string name="fragment_sign_up_label">Sign up</string>
    <!-- main nav graph -->
    <string name="fragment_books_label">Books</string>
    <string name="fragment_add_book_label">Add book</string>
    <string name="fragment_profile_label">Profile</string>
</resources>