<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.LogInFragment">

    <data>
        <variable
            name="viewModel"
            type="be.howest.defoor.remi.minerva.model.view_models.LogInViewModel" />
        <variable
            name="fragment"
            type="be.howest.defoor.remi.minerva.fragments.LogInFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/log_in_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_in_input_email_wrapper"
            android:layout_width="@dimen/form_elem_width"
            android:layout_height="@dimen/form_elem_height"
            android:layout_marginTop="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/log_in_input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_in_input_password_wrapper"
            android:layout_width="@dimen/form_elem_width"
            android:layout_height="@dimen/form_elem_height"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/log_in_input_email_wrapper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/log_in_input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/log_in_log_in"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/form_elem_height"
            android:layout_marginTop="30dp"
            android:onClick="@{() -> fragment.logIn()}"
            android:text="@string/log_in"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/corner_radius"
            app:layout_constraintEnd_toEndOf="@+id/log_in_input_password_wrapper"
            app:layout_constraintTop_toBottomOf="@+id/log_in_input_password_wrapper" />

        <TextView
            android:id="@+id/log_in_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> fragment.navigateToSignUpFragment()}"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/log_in_log_in" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>