<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="be.howest.defoor.remi.minerva.fragments.SignUpFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sand"
        tools:context=".fragments.LogInFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_email_wrapper"
            android:layout_width="@dimen/form_elem_width"
            android:layout_height="@dimen/form_elem_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/sand_accent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/navy_blue"
                android:textColorHint="@color/navy_blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_password_wrapper"
            android:layout_width="@dimen/form_elem_width"
            android:layout_height="@dimen/form_elem_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_input_email_wrapper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/sand_accent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/navy_blue"
                android:textColorHint="@color/navy_blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_password_confirmation_wrapper"
            android:layout_width="@dimen/form_elem_width"
            android:layout_height="@dimen/form_elem_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_input_password_wrapper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_input_password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/sand_accent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/navy_blue"
                android:textColorHint="@color/navy_blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/form_elem_height"
            android:backgroundTint="@color/sand_accent"
            android:onClick="@{() -> fragment.navigateToLogInFragment()}"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/navy_blue"
            app:cornerRadius="@dimen/corner_radius"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_input_password_confirmation_wrapper"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_input_password_confirmation_wrapper" />

        <TextView
            android:id="@+id/sign_up_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> fragment.signUp()}"
            android:text="@string/log_in"
            android:textColor="@color/navy_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_sign_up" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>