<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ProfileFragment">

    <data>
        <variable
            name="viewModel"
            type="be.howest.defoor.remi.minerva.model.view_models.ProfileViewModel" />
        <variable
            name="fragment"
            type="be.howest.defoor.remi.minerva.fragments.ProfileFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/profile_label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/label_account"
            app:layout_constraintStart_toStartOf="@+id/profile_button_og_off"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@{viewModel.user.email}"
            app:layout_constraintStart_toStartOf="@+id/profile_button_og_off"
            app:layout_constraintTop_toBottomOf="@+id/profile_label_email"
            tools:text="remi.defoor@student.howest.be" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/profile_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/switch_dark_mode"
            app:layout_constraintStart_toStartOf="@+id/profile_button_og_off"
            app:layout_constraintTop_toBottomOf="@+id/profile_email" />

        <Button
            android:id="@+id/profile_button_og_off"
            android:layout_width="@dimen/form_elem_width"
            android:layout_height="@dimen/form_elem_height"
            android:layout_marginTop="30dp"
            android:onClick="@{() -> fragment.signOff()}"
            android:text="@string/log_off"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_theme" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>